src/3.0/advanced/render-event.md
# View Render Event

## Introduction

The `view_render_event()` function in UnoPim allows developers to inject content dynamically before or after the main content of a template. This functionality is useful for modifying template output without directly altering the template file itself, enhancing flexibility and maintainability in your application.

## Render View

To utilize the `view_render_event()` function effectively, follow these steps:

### Injecting Content in Blade Templates

You can use `view_render_event()` within your Blade templates (*.blade.php) to specify points where content should be injected. Here’s an example:

```blade
@section('content-wrapper')

    {!! view_render_event('unopim.admin.layout.content.before') !!}

    <div class="content">
        {{-- the page's own markup --}}
    </div>

    {!! view_render_event('unopim.admin.layout.content.after') !!}

@endsection
```

Here `unopim.admin.layout.content.before` and `unopim.admin.layout.content.after` are event names marking where content may be injected, before and after the page content.

The helper also accepts a second argument, passed through to every listener — core views use this to hand over the record being rendered:

```blade
{!! view_render_event('unopim.admin.system_settings.edit.'.$entry['key'].'.before', ['entry' => $entry]) !!}
```

### Listening to Events

To handle these events and inject content dynamically, you need to listen to them in your application’s event system (typically in the `EventServiceProvider`).

Open your `EventServiceProvider.php` file located in `app/Providers` or similar directory.

In the `boot()` method of your `EventServiceProvider`, add event listeners as follows:

```php
<?php

namespace Webkul\Example\Providers;

use Illuminate\Support\ServiceProvider;
use Illuminate\Support\Facades\Event;

class ExampleServiceProvider extends ServiceProvider
{
    /**
     * Register any events for your application.
     *
     * @return void
     */
    public function boot()
    {
        Event::listen('unopim.admin.layout.content.before', function($viewRenderEventManager) {
            $viewRenderEventManager->addTemplate('path/to/before_content_template.blade.php');
        });

        Event::listen('unopim.admin.layout.content.after', function($viewRenderEventManager) {
            $viewRenderEventManager->addTemplate('path/to/after_content_template.blade.php');
        });
    }
}
```
Replace `'path/to/before_content_template.blade.php'` and `'path/to/after_content_template.blade.php'` with the actual paths to the Blade template files you want to inject.

:::warning
   Make sure that you have registered the **`EventServiceProvider`** in your own service provider.
:::

### Implementation Details

- `$viewRenderEventManager->addTemplate()`: This method adds the specified template file to the rendering queue for the corresponding event. When the event is triggered during template rendering, UnoPim will include the specified template's content at the designated injection point.

- `Event Handling`: Ensure that you properly handle the events within your application’s event flow. This involves registering listeners correctly in EventServiceProvider and ensuring that the templates being injected are structured and formatted according to your application's requirements.

### Considerations

- `Integration`: Integrate this functionality carefully into your UnoPim application to maintain coherence and readability of your codebase

- `Customization`: Customize event names (`'unopim.admin.layout.content.before'`, `'unopim.admin.layout.content.after'`) and template paths according to your specific application needs and structure.

By following these steps, you can effectively leverage the `view_render_event()` function in UnoPim to dynamically inject content into template sections, enhancing flexibility and customization options within your application.